[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scripts/ui/gender_select_ui.gd" id="1"]
[ext_resource type="Texture2D" path="res://assets/sprites/backgrounds/gender_select_bg.png" id="2"]

[node name="GenderSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2")
expand_mode = 1
stretch_mode = 6

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="VBox"]
layout_mode = 2
text = "Choose Your Character"
horizontal_alignment = 1

[node name="ButtonContainer" type="HBoxContainer" parent="VBox"]
layout_mode = 2
theme_override_constants/separation = 40
alignment = 1

[node name="BoyContainer" type="VBoxContainer" parent="VBox/ButtonContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="BoySprite" type="TextureRect" parent="VBox/ButtonContainer/BoyContainer"]
layout_mode = 2
custom_minimum_size = Vector2(64, 64)
stretch_mode = 5

[node name="BoyButton" type="Button" parent="VBox/ButtonContainer/BoyContainer"]
layout_mode = 2
custom_minimum_size = Vector2(100, 40)
text = "Boy"

[node name="GirlContainer" type="VBoxContainer" parent="VBox/ButtonContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="GirlSprite" type="TextureRect" parent="VBox/ButtonContainer/GirlContainer"]
layout_mode = 2
custom_minimum_size = Vector2(64, 64)
stretch_mode = 5

[node name="GirlButton" type="Button" parent="VBox/ButtonContainer/GirlContainer"]
layout_mode = 2
custom_minimum_size = Vector2(100, 40)
text = "Girl"
